--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- stylesheets, damit das frontend besser aussieht--> 
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -18,6 +19,7 @@
     <title>{% block title %}Home{% endblock %}</title>
   </head>
   <body>
+    <!-- implementierung navigationleiste--> 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <button
         class="navbar-toggler"
@@ -27,10 +29,14 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
+      <!-- wenn leiste zu klein kommt button für navigationleiste--> 
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
           {% if user.is_authenticated %}
           <a class="nav-item nav-link" id="home" href="/">Home</a>
+          <a class="nav-item nav-link" id="new_project" href="/new_project">Projekt anlegen</a>
+          <a class="nav-item nav-link" id="prio" href="/rahmenbedingungen">Projekte Priorisieren</a>
+          <a class="nav-item nav-link" id="search_project" href="/">Projekt suchen???</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           {% else %}
           <a class="nav-item nav-link" id="login" href="/login">Login</a>
@@ -39,7 +45,8 @@
         </div>
       </div>
     </nav>
-
+    <!-- massages: siehe backend (auth.py)-->
+    <!-- error message-->  
     {% with messages = get_flashed_messages(with_categories=true) %} {% if
     messages %} {% for category, message in messages %} {% if category ==
     'error' %}
@@ -49,6 +56,7 @@
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
+    <!-- succsesful massage--> 
     {% else %}
     <div class="alert alert-success alter-dismissable fade show" role="alert">
       {{ message }}
