--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,25 +1,25 @@
 {% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
 %}
 <form method="POST">
-  <h3 align="center">Login</h3>
+  <h1 class="mb-5 mt-3" align="center">Login</h1>
   <div class="form-group">
-    <label for="email">Email Address</label>
+    <label for="email">Email Addresse</label>
     <input
       type="email"
       class="form-control"
       id="email"
       name="email"
-      placeholder="Enter email"
+      placeholder="Email eingeben"
     />
   </div>
   <div class="form-group">
-    <label for="password">Password</label>
+    <label for="password">Passwort</label>
     <input
       type="password"
       class="form-control"
       id="password"
       name="password"
-      placeholder="Enter password"
+      placeholder="Passwort eingeben"
     />
   </div>
   <br />
